--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,9 @@
   <script src="//cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
   <![endif]-->
 
+  <!--GOOGLE FONTS-->
+  <link href='http://fonts.googleapis.com/css?family=Oswald:400,700,300' rel='stylesheet' type='text/css'>
+
   <!--ESTILOS-->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.3/normalize.min.css"/>
   <link rel="stylesheet" href="css/formikation-demo.css">
@@ -105,7 +108,7 @@
           <select class="required itext full" id="city" name="city"><option>A CORUÑA</option><option>AMES</option><option>ARTEIXO</option><option>ARZUA</option><option>AS PONTES DE GARCIA RODRIGUEZ</option><option>BAIO</option><option>BERTAMIRANS</option><option>BETANZOS</option><option>BOIRO</option><option>CAMBRE</option><option>CARBALLO</option><option>CARIÑO</option><option>CEDEIRA</option><option>CEE</option><option>CORUÑA, A</option><option>CORUÑA</option><option>CULLEREDO (SANTO ESTEVO)</option><option>CULLEREDO</option><option>CURTIS</option><option>EL CARBAYO-NOS-OLEIROS</option><option>EL FERROL DEL CAUDILLO</option><option>FEANS (MESOIRO)</option><option>FENE</option><option>FERROL</option><option>Ferrol - Coruña</option><option>LA CORUÑA</option><option>LARACHA</option><option>La Coruña</option><option>MELLIDE</option><option>MONTOUTO (TEO)</option><option>MUGARDOS</option><option>MUROS</option><option>NARON</option><option>NEDA</option><option>NEGREIRA</option><option>NOIA</option><option>NOYA</option><option>OLEIROS-PERILLO</option><option>OLEIROS</option><option>ORDES</option><option>ORTIGUEIRA</option><option>PADRON</option><option>PONTECESO</option><option>PONTEDEUME</option><option>PUEBLA DEL CARAMIÑAL</option><option>RIANXO</option><option>RIBEIRA (FRIONS)</option><option>RIBEIRA</option><option>RUTIS- CULLEDERO</option><option>SADA</option><option>SAN PEDRO DE LEIXA (FERROL)</option><option>SANTA COMBA</option><option>SANTIAGO DE COMPOSTELA</option><option>Santiago de Compostela- Coruña</option><option>TEO</option><option>TOMELLOSO</option><option>VIDUIDO DE ARRIBA-AMES</option><option>VIMIANZO</option><option>coruña</option></select>
         </div>
         <div class="row">
-          <label for="zipcode">Código Postal</label>
+          <label for="zipcode" class="w100">Código Postal</label>
           <select class="required itext full" id="zipcode" name="zipcode"><option>15001</option><option>15002</option><option>15003</option><option>15004</option><option>15006</option><option>15008</option><option>15009</option><option>15011</option></select>
         </div>
 
@@ -114,7 +117,7 @@
           <select id="open_day_inscription_school" name="open_day_inscription[school]"><option value="1114">LA GRANDE OBRA DE ATOCHA.</option><option value="1127">SANTO DOMINGO</option><option value="4044">RIAS ALTAS</option><option value="50660">ESCUELA DE ARTE PABLO PICASSO</option><option value="xxxx">ESCUELA DE ARTE PABLO PICASSO MUY MUY MUY MUY MUY LARGO</option></select>
         </div>
         <div class="row">
-          <label for="open_day_inscription_attendees_number">Nº Asistentes</label>
+          <label for="open_day_inscription_attendees_number" class="w100">Nº Asistentes</label>
           <select id="open_day_inscription_attendees_number" name="open_day_inscription[attendees_number]"><option value="1">1</option>
             <option value="2">2</option>
             <option value="3">3</option></select>
