Funcionando en Chrome, IE8 no :)

--- a/public/index.html
+++ b/public/index.html
@@ -114,7 +114,7 @@
 
         <div class="row">
           <label for="pen_day_inscription" class="w100">Colegio</label>
-          <select id="open_day_inscription_school" name="open_day_inscription[school]"><option value="1114">LA GRANDE OBRA DE ATOCHA.</option><option value="1127">SANTO DOMINGO</option><option value="4044">RIAS ALTAS</option><option value="50660">ESCUELA DE ARTE PABLO PICASSO</option><option value="xxxx">ESCUELA DE ARTE PABLO PICASSO MUY MUY MUY MUY MUY LARGO</option></select>
+          <select id="open_day_inscription_school" name="open_day_inscription[school]"><option value="1114">LA GRANDE OBRA DE ATOCHA.</option><option value="1127">SANTO DOMINGO</option><option value="4044">RIAS ALTAS</option><option value="50660">ESCUELA DE ARTE PABLO PICASSO</option><option value="xxxx">ESCUELA DE ARTE PABLO PICASSO MUY MUY MUY MUY MUY LARGO </option></select>
         </div>
         <div class="row">
           <label for="open_day_inscription_attendees_number" class="w100">Nº Asistentes</label>
@@ -126,14 +126,14 @@
             <label><input id="open_day_inscription_student_attending" name="open_day_inscription[student_attending]" type="checkbox" value="1" checked="checked"> ¿Asistirá estudiante?</label>
           </div>
           <div class="row shaded">
-            <label for="open_day_inscription_parents_attending"><input id="open_day_inscription_parents_attending" name="open_day_inscription[parents_attending]" type="checkbox" value="1"> ¿Asistirán padres estudiante?</label>
+            <label><input id="open_day_inscription_parents_attending" name="open_day_inscription[parents_attending]" type="checkbox" value="1"> ¿Asistirán padres estudiante?</label>
           </div>
           <div class="row">
             <input class="required itext full" id="open_day_inscription_degree_name" name="open_day_inscription[degree_name]" placeholder="Titulación en la que estás interesado" size="30" type="text">
           </div>
           <div class="row">
             <input class="enviar upper fr" type="submit" value="Inscribirme">
-            <label class="aviso-legal">
+            <label class="fk-check aviso-legal">
               <input checked="checked" id="open_day_inscription_legal_agreement" name="open_day_inscription[legal_agreement]" type="checkbox" value="1">
               <a href="/#TB_inline?height=520&amp;width=680&amp;inlineId=tb_aviso_legal" class="thickbox">Aviso legal</a>
             </label>
@@ -143,33 +143,33 @@
             <textarea name="sample-textarea" id="sample-textarea" cols="30" rows="10">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id, aliquam, labore molestias incidunt obcaecati sapiente molestiae perspiciatis vitae ipsum possimus iure ratione fuga quae nobis eaque. Ea, beatae provident quos repellendus obcaecati. Minus, distinctio, ducimus nobis maxime quam a odio pariatur blanditiis totam animi impedit illo iusto excepturi sapiente voluptate? Nulla, totam, obcaecati fugit in debitis quo doloremque ut sunt cum vitae voluptatibus mollitia ea aliquid. Excepturi, molestiae dolore amet nostrum laboriosam cumque eligendi qui at. Sapiente harum enim accusamus.</textarea>
           </div>
           <div class="row">
-            <label for="sample-file-input" class="w100">Ejemplo de textarea</label>
+            <label for="sample-file-input" class="w100">Ejemplo de file input</label>
             <input type="file" name="sample-file-input" id="sample-file-input">
           </div>
           <div class="row">
-            <label>
+            <label class="radio">
               <input type="radio" name="primero" id="">
               Radio 1
             </label>
-            <label>
+            <label class="radio">
               <input type="radio" name="primero" id="">
               Radio 2
             </label>
-            <label>
+            <label class="radio">
               <input type="radio" name="primero" id="">
               Radio 2
             </label>
           </div>
           <div class="row">
-            <label class="w100">
+            <label class="w100 radio">
               <input type="radio" name="segundo" id="" checked >
               Radio 1
             </label>
-            <label class="w100">
+            <label class="w100 radio">
               <input type="radio" name="segundo" id="">
               Radio 2
             </label>
-            <label class="w100">
+            <label class="w100 radio">
               <input type="radio" name="segundo" id="">
               Radio 2
             </label>
