Coregido detalle en IE8

--- a/public/index.html
+++ b/public/index.html
@@ -123,7 +123,7 @@
             <option value="3">3</option></select>
           </div>
           <div class="row shaded">
-            <label id="open-day-label"><input id="open_day_inscription_student_attending" name="open_day_inscription[student_attending]" type="checkbox" value="1" checked="checked"> ¿Asistirá estudiante?</label>
+            <label id="open-day-label"><input checked="checked" id="open_day_inscription_student_attending" name="open_day_inscription[student_attending]" type="checkbox" value="1"> ¿Asistirá estudiante?</label>
           </div>
           <div class="row shaded">
             <label><input id="open_day_inscription_parents_attending" name="open_day_inscription[parents_attending]" type="checkbox" value="1"> ¿Asistirán padres estudiante?</label>
