Funcionando en todos (ie8 incluido) queda ocultarlos check / radios

--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
   <!--[if IE]><meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" /><![endif]-->
 
   <!--INFORMACIÓN GENERAL DEL SITIO -->
-  <title>Test del formication</title>
+  <title>Test del formikation</title>
 
   <!--SELECTIVIZR, MODERNIZR & FAVICON IE6 / 8-->
   <!--ALWAYS BEFORE GOOGLE FONTS & STYLES-->
@@ -29,7 +29,7 @@
 </head>
 <body class="opA" id="www_dominio_com">
 
-  <form accept-charset="UTF-8" action="#" class="formication ue-theme" id="new_open_day_inscription" method="post" novalidate="novalidate">
+  <form accept-charset="UTF-8" action="#" class="formikation ue-theme" id="new_open_day_inscription" method="post" novalidate="novalidate">
     <fieldset>
       <p>Por favor, indícanos</p>
       <div class="row">
