--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,6 @@
 
   <!--ESTILOS-->
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/2.1.3/normalize.min.css"/>
-  <link rel="stylesheet" href="css/formikation-demo.css">
   <link rel="stylesheet" href="css/formikation.css">
 
 </head>
@@ -178,7 +177,7 @@
       </form>
 
       <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-      <script src="js/formikation.js"></script>
+      <script src="js/formikation.min.js"></script>
       <script src="js/ready.js"></script>
     </body>
     </html>
