--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       padding: 0;
       float: left;
     }
+    .row {
+      margin-bottom: 1em;
+    }
 
   </style>
 
@@ -112,7 +115,7 @@
 
 
   <script src="http://code.jquery.com/jquery-1.11.2.min.js"></script>
-  <script src="./dist/jquery.formikation.min.js"></script>
+  <script src="./dist/jquery.formikation.js"></script>
 
   <script type="text/javascript">
     $(function() {
