--- a/demo/index.html
+++ b/demo/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Formikation default theme sample.</title>
+  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css"/>
   <link rel="stylesheet" href="../dist/formikation.css"/>
   <style media="screen">
     body {
