Use data-text as file placeholder

--- a/demo/index.html
+++ b/demo/index.html
@@ -47,12 +47,12 @@
 
     <div class="row">
       <label for="example-file-input">File input example</label>
-      <input type="file" name="example-file-input" id="example-file-input">
+      <input type="file" name="example-file-input" id="example-file-input" data-text="Select file...">
     </div>
 
     <div class="row">
       <label for="example-file-input">File input disabled example</label>
-      <input type="file" name="example-file-input" id="example-file-input" disabled>
+      <input type="file" name="example-file-input" id="example-file-input" data-text="Select file disabled..." disabled>
     </div>
 
     <div class="row">
@@ -87,7 +87,7 @@
     </div>
   </form>
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-  <script src="../dist/formikation.js"></script>
+  <script src="../src/formikation.js"></script>
   <script src="./ready.js"></script>
 </body>
 </html>
