--- a/demo/index.html
+++ b/demo/index.html
@@ -31,6 +31,15 @@
         <option value="7">Option 6</option>
       </select>
     </div>
+    <div class="row">
+      <label for="example-select">Select with blank option example</label>
+      <select id="example-select" name="example-select">
+        <option value="1"></option>
+        <option value="2">Option 1</option>
+        <option value="3">Option 2</option>
+        <option value="4">Option 3</option>
+      </select>
+    </div>
 
     <div class="row">
       <label for="example-select-disabled">Select disabled example</label>
