Add switches theme

--- a/demo/index.html
+++ b/demo/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.css"/>
   <link rel="stylesheet" href="../dist/formikation.css"/>
   <link rel="stylesheet" href="../dist/themes/default.css"/>
+  <link rel="stylesheet" href="../dist/themes/switches.css"/>
   <style media="screen">
     body {
       font-family: monospace;
@@ -103,7 +104,39 @@
         <input name="example-checkbox-3" type="checkbox" value="3" disabled>
         Checkbox disabled
       </label>
-      </label>
+    </div>
+
+    <div class="fk-switches">
+      <h2>Switches radio and checkboxes theme</h2>
+      <div class="row">
+        <label>
+          <input type="radio" name="example-radios-2" value="1">
+          Radio example
+        </label>
+        <label>
+          <input type="radio" name="example-radios-2" value="2" checked="checked">
+          Radio checked
+        </label>
+        <label>
+          <input type="radio" name="example-radios-2" value="3" disabled>
+          Radio disabled
+        </label>
+      </div>
+
+      <div class="row">
+        <label>
+          <input name="example-checkbox-1" type="checkbox" value="1">
+          Checkbox example
+        </label>
+        <label>
+          <input name="example-checkbox-2" type="checkbox" value="2" checked="checked">
+          Checkbox checked
+        </label>
+        <label>
+          <input name="example-checkbox-3" type="checkbox" value="3" disabled>
+          Checkbox disabled
+        </label>
+      </div>
     </div>
   </form>
 
