--- a/demo/index.html
+++ b/demo/index.html
@@ -188,15 +188,15 @@
 
     <div class="row">
       <label>
-        <input type="radio" name="example-radios" value="1">
+        <input type="radio" name="example-radios-3" value="1">
         Radio example
       </label>
       <label>
-        <input type="radio" name="example-radios" value="2" checked="checked">
+        <input type="radio" name="example-radios-3" value="2" checked="checked">
         Radio checked
       </label>
       <label>
-        <input type="radio" name="example-radios" value="3" disabled>
+        <input type="radio" name="example-radios-3" value="3" disabled>
         Radio disabled
       </label>
     </div>
@@ -217,6 +217,7 @@
       </label>
     </div>
   </form>
+
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
   <script src="../src/formikation.js"></script>
